Fix products (images too big)

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -44,7 +44,7 @@
     .exigo-laptop-workout-photo {
         max-width: 65vh;
         left: -31vw;
-        top: 26vh;
+        top: 23vh;
         position: absolute;
     }
 
